# OfficeClaw

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/: README.md
apps/agent-core/: Cargo.toml  Dockerfile  README.md  build.rs
apps/agent-core/src/: lib.rs  main.rs
apps/agent-core/src/agent/: mod.rs  orchestrator.rs  proactive.rs
apps/agent-core/src/api/: grpc.rs  health.rs  metrics.rs  mod.rs
apps/agent-core/src/crypto/: envelope.rs
apps/agent-core/src/domain/: mod.rs
apps/agent-core/src/jobs/: scheduler.rs
apps/agent-core/src/policy/: mod.rs  rules.rs  state_machine.rs
apps/agent-core/src/skills/: mod.rs
apps/agent-core/src/skills/graph/: calendar.rs  client.rs  mail.rs  mod.rs
apps/agent-core/src/skills/rag/: retriever.rs
apps/agent-core/src/storage/: approvals_repo.rs  audit_repo.rs  conversation_refs_repo.rs  db.rs  migrations.rs  mod.rs  sessions_repo.rs  tokens_repo.rs
apps/agent-core/tests/: grpc_service_tests.rs  orchestrator_tests.rs  persistence_integration_tests.rs  policy_rules_tests.rs  state_machine_tests.rs
apps/teams-adapter/: Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
db/migrations/: 0001_init.sql  0002_indexes.sql
docs/: README.md
docs/architecture/: architecture-thoughts-and-decisions.md  data-model-v1.md  implementation-order-proto-first.md  inspiration-mapping.md  mvp-goals-and-scope.md  proto-contracts-v1.md  rust-core-design-v1.md  selected-production-route.md  (+2 more)
infra/: .env.dev.example
proto/: README.md  agent.proto
(+45 files in other folders)
