[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_core"
path = "src/lib.rs"

[[bin]]
name = "agent-core"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
wiremock = "0.6"
